--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   </head>
   <body>
-    {{ content }}
+    <div class="window">
+      <div class="tabs">
+
+      </div>
+      {{ content }}
+    </div>
   </body>
 </html>
