FIX: javascript after adding icons

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,5 +1,4 @@
 ---
-permalink: /
 ---
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
@@ -14,10 +13,10 @@ permalink: /
       <!-- Tab Links -->
       <div class="tabs">
         <button class="btn btn-header">X</button>
-        <button id="home-link" class="tablinks btn btn-header btn-lines">home</button>
-        <button id="projects-link" class="tablinks btn btn-header btn-lines">projects</button>
-        <button id="contact-link" class="tablinks btn btn-header btn-lines">contact</button>
-        <a href="https://susanjsp.com" class="btn btn-header btn-lines" target="_blank">Blog</a>
+        <button id="home-link" class="tablinks btn btn-header btn-lines"><i class="fas fa-home"></i> home</button>
+        <button id="projects-link" class="tablinks btn btn-header btn-lines"><i class="fas fa-briefcase"></i> projects</button>
+        <button id="contact-link" class="tablinks btn btn-header btn-lines"><i class="fas fa-envelope-open-text"></i> contact</button>
+        <a href="https://susanjsp.com" class="btn btn-header btn-lines" target="_blank"><i class="fab fa-microblog"></i> Blog</a>
         <button class="btn btn-header">+</button>
       </div>
       <!-- Tab Content -->
@@ -47,12 +46,12 @@ permalink: /
           <p>If you'd like to collaborate on a project together, or if you would like
             to have a chat feel free to drop me a message below </p>
           <div class="links">
-            <a href="" class="btn btn-links green">Email</a>
-            <a href="" class="btn btn-links purple">Github</a>
-            <a href="" class="btn btn-links yellow">LinkedIn</a>
-            <a href="" class="btn btn-links blue">Twitter</a>
-            <a href="https://susanjsp.com" class="btn btn-links pink" target="_blank">Blog</a>
-            <a href="" class="btn btn-links green">CodePen</a>
+            <a href="{{ site.email }}" class="btn btn-links green" target="_blank"><i class="fas fa-envelope-square"></i> Email</a>
+            <a href="{{ site.github }}" class="btn btn-links purple" target="_blank"><i class="fab fa-github-alt"></i> Github</a>
+            <a href="{{ site.linkedin }}" class="btn btn-links yellow" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            <a href="{{ site.twitter }}" class="btn btn-links blue" target="_blank"><i class="fab fa-twitter-square"></i> Twitter</a>
+            <a href="{{ site.blog }}" class="btn btn-links pink" target="_blank"><i class="fab fa-microblog"></i> Blog</a>
+            <a href="{{ site.codepen }}" class="btn btn-links green" target="_blank"><i class="fab fa-codepen"></i> CodePen</a>
           </div>
         </div>
       </div>
