--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,7 @@
+@import "../_data/scss/fontawesome.scss";
+@import "../_data/scss/solid.scss";
+@import "../_data/scss/brands.scss";
+
 @import "config/colors";
 @import "config/fonts";
 
