--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -7,18 +7,18 @@ body {
   overflow: hidden;
 }
 .window {
-  height: 100%;
   width: 95vw;
+  height: 100%;
   border: 2px solid $borderColor;
   background-color: $backgroundColor;
+  max-width: 800px;
 }
 body, .window {
-  min-width: 360px;
+  min-width: 350px;
 }
-
-@media (min-width: 768px) {
-  .window {
-    width: 75vw;
-    height: 70vh;
-  }
+@media (min-width: 550px) {
+  body { padding: 10vw 5vw; }
+}
+@media (min-width: 900px) {
+  body { padding: 10vw 10vw; }
 }
