--- a/_sass/config/_colors.scss
+++ b/_sass/config/_colors.scss
@@ -6,6 +6,7 @@ $headerColor: #f8c2fa;
 
 $green: #d8ff7d;
 $blue: #8aedff;
+$blueBorder: #8affd8;
 $yellow: #ffdf51;
 $purple: #da89ff;
 $pink: #f598f8;
