--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -8,6 +8,7 @@
 @import "components/index";
 
 @import "pages/index";
+@import "pages/projects";
 
 
 $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
