--- a/_sass/config/_colors.scss
+++ b/_sass/config/_colors.scss
@@ -4,6 +4,8 @@ $backgroundColor: #f7e9f6;
 $borderColor: #f700ff;
 $headerColor: #f8c2fa;
 
+$project-btn-shadow: #23e2b9;
+
 $green: #d8ff7d;
 $blue: #8aedff;
 $blueBorder: #8affd8;
