--- a/_sass/pages/projects.scss
+++ b/_sass/pages/projects.scss
@@ -1,27 +1,54 @@
 #projects {
   display: table;
-  margin-right: 0px;
+  margin: 0px 0px 0px 16px;
   text-align: left;
-  & > div {
-    height: 100%;
-  }
 }
 .projects-container {
-  display: grid;
-  grid-template-columns: 1fr 4fr;
   height: 100%;
   .projects-sidebar {
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    gap: 16px;
+    padding: 8px 16px 0px 0px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 12px;
+    & > :first-child {
+      grid-column: span 3;
+    }
   }
   .projects-main {
     overflow-y: scroll;
-    padding: 0px 8px 0px 24px;
+  }
+  h2 {
+    color: white;
+    font-size: 3rem;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-style: italic;
+    margin: 16px 0px;
+    text-shadow: 5px 5px 0px $blue;
+    .btn-links {
+      vertical-align: middle;
+      text-shadow: none;
+      padding-right: 8px;
+      padding-left: 8px;
+    }
   }
 }
+.active {
+  transform: translate(4px, 4px);
+  box-shadow: 1px 1px 0px $project-btn-shadow;
+}
 
-// @media (min-width: 900px) {
-//   .projects-container { height: 99%; }
-// }
+@media (min-width: 768px) {
+  .projects-container {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    .projects-sidebar {
+      display: flex;
+      flex-direction: column;
+      padding-top: 26px;
+    }
+    .projects-main {
+      padding: 0px 8px 0px 24px;
+    }
+  }
+}
