restyled/re-config projects index page, refactored css of windows

--- a/_layouts/project-index.html
+++ b/_layouts/project-index.html
@@ -5,9 +5,9 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>Susan's Portfolio</title>
-    <link rel="stylesheet" href="./assets/css/main.css">
-    <script type="module" src="./assets/js/main.js"></script>
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="../assets/css/main.css">
+    <script type="module" src="../assets/js/main.js"></script>
   </head>
   <body>
     <div class="window">
@@ -18,4 +18,3 @@
     </div>
   </body>
 </html>
-
