--- a/_sass/config/_colors.scss
+++ b/_sass/config/_colors.scss
@@ -1,12 +1,14 @@
 $bodyColor: #000000;
 $backgroundColor: #f7e9f6;
-
 $borderColor: #f700ff;
-$headerColor: #f8c2fa;
 
-$project-btn-shadow: #23e2b9;
+$headerColor: #fdd2ff;
+$headerHover: #fdd2ff;
 
-$green: #d8ff7d;
+$project-card-shadow: #23e2b9;
+$project-card-bkg: #affdea;
+
+$green: #b3e76f;
 $blue: #8aedff;
 $blueBorder: #8affd8;
 $yellow: #ffdf51;
