--- a/_sass/config/_fonts.scss
+++ b/_sass/config/_fonts.scss
@@ -1,3 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,100;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,700&display=swap');
 
 $linkFont: 'VT323', monospace;
+$headerFont: 'Roboto', sans-serif;
+$bodyFont: 'Ubuntu', sans-serif;
