add summaries for projects, mockup for cocktails

--- a/_layouts/project-page.html
+++ b/_layouts/project-page.html
@@ -22,6 +22,7 @@
         {% else %}
           <h4>Personal side-project by Susan</h4>
         {% endif %}
+        <img src="{{ page.image }}" alt="Device mockup for {{ page.title }}">
         {{ content }}
         <a id="back-to-top" href=""> ^ </a>
         </div>
