--- a/_sass/components/_cards.scss
+++ b/_sass/components/_cards.scss
@@ -6,7 +6,12 @@
   border-radius: 10px;
   padding: 12px 16px;
   transition: 0.1s ease-in-out;
-  width: 100%;
+  width: 280px;
+  img {
+    border-radius: 10px;
+
+    object-fit: cover;
+  }
   a {
     text-decoration: none;
     font-family: $bodyFont;
