--- a/_sass/components/_cards.scss
+++ b/_sass/components/_cards.scss
@@ -9,7 +9,6 @@
   width: 280px;
   img {
     border-radius: 10px;
-
     object-fit: cover;
   }
   a {
@@ -36,6 +35,7 @@
     float: left;
     width: 80%;
     height: 100%;
+    border: 2px solid $project-card-shadow;
   }
 }
 .projects-card-top-btns {
