--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -33,17 +33,14 @@
 /* PROJECTS INDEX PAGE */
 .btn-project-circle {
   border-radius: 50%;
-  padding: 4px 0px 4px 0px;
   border: 4px double $project-card-shadow;
   box-shadow: 2px 2px $project-card-shadow;
   transition: 0.1s ease-in-out;
+  i {
+    color: $project-card-shadow;
+  }
   &:hover {
     transform: translate(1px, 1px);
     box-shadow: 1px 1px $project-card-shadow;
-  }
-}
-@media (min-width: 768px) {
-  .links {
-    grid-template-columns: 1fr 1fr 1fr;
   }
 }
