--- a/_sass/components/_cards.scss
+++ b/_sass/components/_cards.scss
@@ -40,12 +40,19 @@
 }
 .projects-card-top-btns {
   float: right;
-  width: 15%;
+  width: 16%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: flex-start;
   height: 100%;
+  border-radius: 4px;
   a {
-    margin: 4px 0px;
+    padding: 4px;
+  }
+  div {
+    background-color: $project-card-shadow;
+    width: auto;
+    height: 25px;
+    border-radius: 5px;
   }
 }
