--- a/_sass/components/_windows.scss
+++ b/_sass/components/_windows.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   height: 98vh;
+  max-height: 1000px;
 }
 .windowcontent {
   flex: 1 0 auto;
@@ -15,6 +16,7 @@
   padding: 0px 2rem;
   text-align: center;
   animation: fadeTab 1s;
+  max-width: 1120px;
 }
 
 @keyframes fadeTab {
