--- a/_sass/pages/home.scss
+++ b/_sass/pages/home.scss
@@ -1,9 +1,9 @@
-#home {
-  img {
-    height: 150px;
-    border-radius: 50%;
-    border: 2px black solid;
-    box-shadow: 2px 2px 0px 2px white,
-                -2px -2px 0px 2px white;
-  }
+.avatar {
+  height: 150px;
+  width: 150px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 2px black solid;
+  box-shadow: 2px 2px 0px 2px white,
+              -2px -2px 0px 2px white;
 }
