updated window-tabs js

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="header">
-  <a class="btn header-tab btn-lines" href="/"><i class="fas fa-home"></i> home</a>
-  <a class="btn header-tab btn-lines" href="/about"><i class="fas fa-user-circle"></i> about</a>
-  <a class="btn header-tab btn-lines" href="/projects"><i class="fas fa-briefcase"></i> projects</a>
-  <a class="btn header-tab btn-lines" href="/contact"><i class="fas fa-envelope-open-text"></i> contact</a>
+  <a class="btn header-tab btn-lines" href="/" data-tab="home"><i class="fas fa-home"></i> home</a>
+  <a class="btn header-tab btn-lines" href="/about" data-tab="about"><i class="fas fa-user-circle"></i> about</a>
+  <a class="btn header-tab btn-lines" href="/projects" data-tab="projects"><i class="fas fa-briefcase"></i> projects</a>
+  <a class="btn header-tab btn-lines" href="/contact" data-tab="contact"><i class="fas fa-envelope-open-text"></i> contact</a>
 </div>
