styling: updated some line-height & margins, plus updated window size for about page

--- a/_sass/pages/queries.scss
+++ b/_sass/pages/queries.scss
@@ -5,6 +5,7 @@
   }
   .windowcontent {
     padding: 0px 7vw;
+    height: 86vh;
   }
 }
 
@@ -13,7 +14,7 @@
     padding: 5rem 0px;
     .windowcontent {
       width: 80vw;
-      // max-width: 1100px;
+      height: 76vh;
     }
   }
   /* HEADER */
