--- a/_sass/components/_windows.scss
+++ b/_sass/components/_windows.scss
@@ -18,8 +18,16 @@
   animation: fadeTab 1s;
   max-width: 1100px;
 }
-
+.content {
+  padding-top: 4rem;
+}
 @keyframes fadeTab {
   from {opacity: 0;}
   to {opacity: 1;}
+}
+
+/* PAGES - About */
+#about {
+  overflow-y: scroll;
+  max-height: 93vh;
 }
