--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,6 +11,7 @@
 @import "pages/projects";
 @import "pages/posts";
 @import "pages/queries";
+@import "pages/about";
 
 // Basic configuration
 * {
@@ -27,9 +28,10 @@ body {
   align-items: center;
   background: white;
   margin: 0;
-  p {
-    line-height: 1.6rem;
+  p, ul, ol {
+    line-height: 2rem;
     font-family: $bodyFont;
+    margin-bottom: 2rem;
   }
 }
 h1, h2, h3, h4, h5, h6 {
@@ -37,4 +39,9 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   font-style: italic;
   font-weight: 900;
+  color: black;
+  margin: 2rem 0px;
+}
+h2 {
+  font-size: 2rem;
 }
