--- a/_sass/components/_cards.scss
+++ b/_sass/components/_cards.scss
@@ -1,58 +1,63 @@
 .projects-card {
-  box-sizing: border-box;
-  background-color: $project-card-bkg;
-  border: 4px double $project-card-shadow;
-  box-shadow: 5px 5px 0px $project-card-shadow;
-  border-radius: 10px;
-  padding: 12px 16px;
   transition: 0.1s ease-in-out;
-  width: 280px;
+  width: 300px;
+  position: relative;
+  background-color: cornsilk;
+  transition: 0.2s ease-in-out;
   img {
-    border-radius: 10px;
     object-fit: cover;
-  }
-  a {
-    text-decoration: none;
-    font-family: $bodyFont;
-    font-size: 1.1rem;
-    font-weight: 600;
-    color: white;
-    margin: 8px 0px;
+    width: 90%;
+    height: 180px;
   }
   & > a {
-    text-shadow: 2px 2px 1px $project-card-shadow;
+    text-decoration: none;
+    font-family: $headerFont;
+    font-size: 1.1rem;
+    font-weight: 600;
+    font-style: italic;
+    color: black;
     text-transform: uppercase;
+    margin: 8px 0px;
+    display: block;
   }
   &:hover {
-    transform: translate(4px, 4px);
-    box-shadow: 1px 1px 0px $project-card-shadow;
+    transform: scale(1.05);
   }
 }
-.projects-card-top {
-  height: 120px;
-  margin-bottom: 0.5rem;
-  img {
-    float: left;
-    width: 80%;
-    height: 100%;
-    border: 2px solid $project-card-shadow;
+/* GITHUB & LIVE LINK */
+.projects-card-btns {
+  margin: 1rem 0px;
+  position: absolute;
+  right: 22px;
+  bottom: 0px;
+  .btn-project {
+    padding: 10px 10px 8px 10px;
+    background-color: $project-card-bkg;
+    border: solid 1px black;
+    border-radius: 50%;
+    display: block;
+    margin-bottom: 8px;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.2)
   }
 }
-.projects-card-top-btns {
-  float: right;
-  width: 16%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  height: 100%;
-  border-radius: 4px;
-  a {
-    padding: 4px;
+
+/* MAC WINDOW STYLE */
+.mac-window {
+  border: 1px solid black;
+  box-shadow: 3px 3px 10px rgba(0,0,0,0.2);
+  .mac-window-header {
+    height: 20px;
+    background-color: $project-card-bkg;
+    border-bottom: 1px solid black;
   }
-  div {
-    background-color: $project-card-shadow;
-    width: auto;
-    height: 25px;
-    border-radius: 5px;
+  .mac-window-buttons {
+    display: flex;
+    & > * {
+      height: 10px;
+      width: 10px;
+      border-radius: 50%;
+      border: 1px solid black;
+      margin: 5px 4px;
+    }
   }
 }
