--- a/_sass/pages/posts.scss
+++ b/_sass/pages/posts.scss
@@ -1,11 +1,14 @@
 #project-post {
   img {
-    width: 100%;
+  width: 100%;
   height: auto;
-  max-height: 500px;
+  max-width: 800px;
   object-fit: scale-down;
   }
   ul, ol {
     font-family: $bodyFont;
+  }
+  .mac-window {
+    width: clamp(298px, 100%, 800px);
   }
 }
