--- a/_sass/pages/projects.scss
+++ b/_sass/pages/projects.scss
@@ -1,12 +1,3 @@
-#projects {
-  .content {
-    display: grid;
-    gap: 1rem;
-    place-items: center;
-    grid-template-columns: 1fr;
-    width: 100%;
-  }
-}
 #project-post {
   padding: 16px 1rem;
   text-align: left;
@@ -19,3 +10,13 @@
 #projects, #project-post {
   overflow-y: scroll;
 }
+.projects-container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: space-around;
+  width: 100%;
+  margin-bottom: 2rem;;
+}
+
