some final changes

--- a/_layouts/project-index.html
+++ b/_layouts/project-index.html
@@ -16,6 +16,6 @@
       <!-- Tab Content -->
       {{ content }}
     </div>
-    <script src="./assets/anime-master/lib/anime.min.js"></script>
+    <script src="../assets/anime-master/lib/anime.min.js"></script>
   </body>
 </html>
