--- a/_sass/components/_windows.scss
+++ b/_sass/components/_windows.scss
@@ -20,6 +20,7 @@
   min-width: 340px;
   max-width: 1100px;
   overflow-y: auto;
+  position: relative;
 }
 @keyframes fadeTab {
   from {opacity: 0;}
