--- a/_sass/components/_cards.scss
+++ b/_sass/components/_cards.scss
@@ -1,9 +1,9 @@
 .projects-card {
   transition: 0.1s ease-in-out;
   width: 300px;
-  max-width: 400px;
+  max-width: 380px;
   position: relative;
-  background-color: cornsilk;
+  background-color: rgb(255, 250, 236);
   transition: 0.2s ease-in-out;
   img {
     object-fit: cover;
@@ -42,18 +42,18 @@
   position: absolute;
   right: 22px;
   bottom: 0px;
-  .btn-project {
-    padding: 10px 10px 8px 10px;
-    background-color: $project-card-bkg;
-    border: solid 1px black;
-    border-radius: 50%;
-    display: block;
-    margin-bottom: 8px;
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
-    &:hover {
-      background-color: $project-card-hover;
-      animation: bounce 1s infinite;
-    }
+}
+.btn-project {
+  padding: 10px 10px 8px 10px;
+  background-color: $project-card-bkg;
+  border: solid 1px black;
+  border-radius: 50%;
+  display: block;
+  margin-bottom: 8px;
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.2);
+  &:hover {
+    background-color: $project-card-hover;
+    animation: bounce 1s infinite;
   }
 }
 
@@ -79,8 +79,8 @@
   }
 }
 
+/* Mac Windows top-left btns */
 @keyframes bounce {
-  0% {transform: translateY(0px); }
   40% {transform: translateY(-8px); }
-  80%, 100% {transform: translateY(0px); }
+  80% {transform: translateY(0px); }
 }
