--- a/_sass/pages/projects.scss
+++ b/_sass/pages/projects.scss
@@ -3,6 +3,9 @@
   text-align: left;
   display: block;
   height: 90%;
+  .mac-window {
+    display: inline-grid;
+  }
   p {
     line-height: 1.5rem;
   }
