fix contact mobile padding

--- a/_sass/components/_windows.scss
+++ b/_sass/components/_windows.scss
@@ -21,6 +21,7 @@
   max-width: 1100px;
   overflow-y: auto;
   position: relative;
+  padding: 0px 2vw;
 }
 @keyframes fadeTab {
   from {opacity: 0;}
