--- a/_sass/config/_colors.scss
+++ b/_sass/config/_colors.scss
@@ -1,9 +1,14 @@
-$bodyColor: #000000;
-$backgroundColor: #fff1fe;
-$borderColor: #ff00f2;
+$bkgColor: white;
+$bodyColor: #2c1d63;
+$backgroundColor: rgb(255, 232, 239);
+// $backgroundColor: #fff1fe;
 
-$headerColor: #fdceff;
-$headerHover: #fdd2ff;
+$borderColor: #392c68;
+// $borderColor: #ff00f2;
+
+$headerColor:  #ffa8c1;
+// $headerColor: #fdceff;
+$headerHover: #fdd3ff;
 
 $project-card-shadow: #23e2b9;
 $project-card-bkg: #affdea;
