--- a/_sass/pages/posts.scss
+++ b/_sass/pages/posts.scss
@@ -4,6 +4,7 @@
   height: auto;
   max-width: 800px;
   object-fit: scale-down;
+  border-radius: 0px 0px 8px 8px;
   }
   ul, ol {
     font-family: $bodyFont;
