--- a/_sass/components/_cards.scss
+++ b/_sass/components/_cards.scss
@@ -48,7 +48,8 @@
 .btn-project {
   padding: 10px 10px 8px 10px;
   background-color: $project-card-bkg;
-  border: solid 1px black;
+  border: solid 2px $borderColor;
+  color: $borderColor;
   border-radius: 50%;
   display: block;
   margin-bottom: 8px;
@@ -61,21 +62,23 @@
 
 /* MAC WINDOW STYLE */
 .mac-window {
-  border: 1px solid black;
+  border: 2px solid $borderColor;
+  border-radius: 8px;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
   .mac-window-header {
-    height: 20px;
     background-color: $project-card-bkg;
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid $borderColor;
     transition: linear 0.5s;
+    border-radius: 6px 6px 0px 0px;
   }
   .mac-window-buttons {
     display: flex;
+    padding: 2px 4px;
     & > * {
       height: 10px;
       width: 10px;
       border-radius: 50%;
-      border: 1px solid black;
+      border: 2px solid $borderColor;
       margin: 5px 4px;
     }
   }
