--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,6 +8,7 @@
     <title>Susan's Portfolio</title>
     <link rel="stylesheet" href="./assets/css/main.css">
     <script type="module" src="./assets/js/main.js"></script>
+    {% include twitter.html %}
   </head>
   <body>
     <div class="window">
