add talks tab, updated copy on about page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,5 +2,6 @@
   <a class="btn header-tab btn-lines" href="/" data-tab="home"><i class="fas fa-home"></i><span> home</span></a>
   <a class="btn header-tab btn-lines" href="/about" data-tab="about"><i class="fas fa-user-circle"></i><span> about</span></a>
   <a class="btn header-tab btn-lines" href="/projects" data-tab="projects"><i class="fas fa-briefcase"></i><span> projects</span></a>
+  <a class="btn header-tab btn-lines" href="/talks" data-tab="talks"><i class="fas fa-comment-dots"></i><span> talks</span></a>
   <a class="btn header-tab btn-lines" href="/contact" data-tab="contact"><i class="fas fa-envelope-open-text"></i><span> contact</span></a>
 </nav>
